hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world-deployment
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
